[gd_scene load_steps=10 format=2]

[ext_resource path="res://gameobjects/Buttons/CloseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/InputSideBar/InputSideBar.gd" type="Script" id=2]
[ext_resource path="res://Assets/SliderBackGround.png" type="Texture" id=3]
[ext_resource path="res://gameobjects/InputSideBar/InputLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Plus-Icon-orange.png" type="Texture" id=6]
[ext_resource path="res://gameobjects/Buttons/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://Futura Std Medium.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 8 )

[node name="InputSideBar" type="Control"]
anchor_right = 0.984
anchor_bottom = 0.97
margin_right = 0.039978
margin_bottom = 0.150024
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.735
margin_top = 132.835
margin_right = 155.265
margin_bottom = 482.835
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="InputContainer" instance=ExtResource( 4 )]
anchor_top = 0.07
anchor_bottom = 0.07
margin_top = -23.4842
margin_right = 209.0
margin_bottom = 32.5159
displayTitle = "Title:"
inputPlaceHolder = " Add Title"

[node name="Location" parent="InputContainer" instance=ExtResource( 4 )]
anchor_top = 0.271
anchor_bottom = 0.271
margin_top = -29.9546
margin_bottom = 26.0454
displayTitle = "Location:"
inputPlaceHolder = " Add Location"

[node name="Date" parent="InputContainer" instance=ExtResource( 4 )]
anchor_top = 0.462
anchor_bottom = 0.462
margin_top = -30.9682
margin_right = 209.0
margin_bottom = 25.0318
displayTitle = "Date: "
inputPlaceHolder = " mm/dd/yy - hh:mm "

[node name="Description" parent="InputContainer" instance=ExtResource( 4 )]
anchor_top = 0.591
anchor_bottom = 0.591
margin_top = -4.63528
margin_right = 282.0
margin_bottom = 92.3647
displayTitle = "Event Description:"
inputPlaceHolder = "       PlaceHolder"
displayDescription = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="EventImage" type="TextureRect" parent="."]
margin_right = 311.0
margin_bottom = 138.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="." instance=ExtResource( 1 )]
margin_left = 23.6211
margin_top = 20.3789
margin_right = 2911.62
margin_bottom = 2908.38

[node name="AddImageButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -66.2853
margin_top = 27.8541
margin_right = 66.7147
margin_bottom = 125.854
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddImageIcon" type="TextureRect" parent="AddImageButton"]
anchor_left = 0.457
anchor_top = -0.254
anchor_right = 0.457
anchor_bottom = -0.254
margin_left = -29.46
margin_top = 24.892
margin_right = 29.54
margin_bottom = 85.892
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AddImageButton"]
anchor_left = 0.419
anchor_top = -0.305
anchor_right = 0.419
anchor_bottom = -0.305
margin_left = -35.2599
margin_top = 107.846
margin_right = 293.74
margin_bottom = 178.846
rect_scale = Vector2( 0.249971, 0.249971 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.509804, 0.0392157, 1 )
text = "Add Image"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateEvent-Button" parent="." instance=ExtResource( 7 )]
margin_left = 84.3175
margin_top = 448.61
margin_right = 274.318
margin_bottom = 488.61
rect_scale = Vector2( 0.0222959, 0.0222959 )
size_flags_horizontal = 0
size_flags_vertical = 0
expand = false
stretch_mode = 5

[node name="Label" type="Label" parent="CreateEvent-Button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -2122.3
margin_top = 233.012
margin_right = -1745.3
margin_bottom = 306.012
rect_scale = Vector2( 10.7806, 10.7806 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Create Event"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_button_down"]
[connection signal="pressed" from="AddImageButton" to="." method="_on_addImage_pressed"]
[connection signal="pressed" from="CreateEvent-Button" to="." method="_on_CreateEventButton_button_down"]
